# Chopron

./: README.md  chopron.db  pyproject.toml
app/: auth.py  logging_utils.py  main.py
app/config/: job_boards.py  role_family_config.py
app/database/: database.py  models.py
app/repositories/: job_repository.py
app/routers/: auth.py  jobs.py  profiles.py
app/services/: application_readiness_service.py  autofill_service.py  candidate_fit_service.py  job_fetcher.py  job_normalizer.py  job_screener.py  job_service.py  llm_client.py  profile_extractor.py  resume_parser.py
app/services/job_sources/: __init__.py  arbeitnow.py  ashby.py  base.py  greenhouse.py  himalayas.py  lever.py  manager.py  remoteok.py  remotive.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/public/greenhouse-autofill/: README.md  background.js  content.js  manifest.json  options.html  options.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: app-shell.tsx  auth-gate.tsx  autofill-preferences-card.tsx  autofill-preferences-dialog.tsx  backend-status-card.tsx  job-card.tsx  job-detail-drawer.tsx  job-filters.tsx  loading-skeletons.tsx  metric-card.tsx  profile-summary.tsx  upload-resume-card.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/lib/: api.ts  auth.ts  format.ts  job-actions.ts  request-context.ts
frontend/src/pages/: applications-dashboard-page.tsx  dashboard-page.tsx  jobs-page.tsx
frontend/src/types/: api.ts
