[project]
name = "chopron"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.50",
    "tree>=0.2.4",
    "uvicorn>=0.39.0",
]
